# TuberryRazrab

./: .gitignore  README.md  components-library-rule.mdc  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt  tuberry.db
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  avito.py  base.py  bot.py  client.py  dialog.py  enums.py  event.py  message.py  personal_telegram_account.py  project.py  settings.py  telegram_chat.py  telegram_source.py  user.py
backend/app/repositories/: __init__.py  avito_repository.py  bot_repository.py  client_repository.py  dialog_repository.py  message_repository.py  personal_telegram_account_repository.py  project_repository.py  project_settings_repository.py  telegram_chat_repository.py  telegram_source_repository.py  user_repository.py
backend/app/routes/: __init__.py  admin.py  auth.py  avito.py  bots.py  clients.py  dialogs.py  personal_telegram_accounts.py  projects.py  telegram_sources.py  webhooks.py
backend/app/schemas/: __init__.py  auth.py  avito.py  bot.py  client.py  dialog.py  personal_telegram_account.py  project.py  settings.py  telegram_chat.py  telegram_source.py
backend/app/scripts/: __init__.py  reset_topics.py  seed.py
backend/app/services/: __init__.py  auth.py  avito.py  dialog.py  personal_telegram_account.py  queue.py  telegram.py  telegram_source.py
backend/app/workers/: __init__.py  avito_poller.py  master_bot.py  (+1 more)
(+47 files in other folders)
